# tet4d

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  ASSETS_LICENSE.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATE.md  LICENSE  NOTICE  POLICY_manifest.json  RDS_2D_TETRIS.md  RDS_3D_TETRIS.md  RDS_4D_TETRIS.md  RDS_TETRIS_GENERAL.md  README.md  THIRD_PARTY_NOTICES.md  conftest.py  context-2026-03-03.instructions.md  front.py  front2d.py  front3d.py  front4d.py  frontend.py  frontend2d.py  frontend_3d.py  pyproject.toml  pytest.ini  requirements.txt  runserver.py  tet2d.py  tet2d1.py
.githooks/: pre-push
.github/: pull_request_template.md
cli/: __init__.py  front.py  front2d.py  front3d.py  front4d.py
docs/: ARCHITECTURE_CONTRACT.md  BACKLOG.md  CHANGELOG.md  CONFIGURATION_REFERENCE.md  DOCUMENTATION_MAP.md  FEATURE_MAP.md  GUIDELINES_RESEARCH.md  KEYBINDINGS_EDITING.md  MENU_STRUCTURE_EDITING.md  MIGRATION_NOTES.md  PROJECT_STRUCTURE.md  RDS_AND_CODEX.md  README.md  RELEASE_CHECKLIST.md  RELEASE_INSTALLERS.md  SECURITY_AND_CONFIG_PLAN.md  SHORT_KEYBINDINGS_GUIDE.md  USER_SETTINGS_REFERENCE.md  WORKFLOW_CODEX.md  docs_structure_batch_manifest.json  plan_file_set_manifest.json  tet4d_spherical_false_lock_fix_manifest.md  tet4d_topology_playground_restructure_plan_codex.md
godot/: AGENTS.md
keybindings/: 2d.json  3d.json  4d.json
native/: AGENTS.md
scripts/: arch_metrics.py  bootstrap_env.sh  build_godot_tet4d_core.sh  check_architecture_boundaries.sh  check_architecture_metric_budgets.sh  check_architecture_metrics_soft_gate.sh  ci_check.sh  (+16 more)
(+1179 files in other folders)
